--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -154,7 +154,7 @@ jobs:
           sed -i 's/^ #define MARAUDER_V6_1/ \/\/MARAUDER_V6_1/' esp32_marauder/configs.h
           sed -i 's/^ #define MARAUDER_KIT/ \/\/MARAUDER_KIT/' esp32_marauder/configs.h
           sed -i 's/^ #define GENERIC_ESP32/ \/\/GENERIC_ESP32/' esp32_marauder/configs.h
-          sed -i 's/^ #define \/\/MARAUDER_FLIPPER/ MARAUDER_FLIPPER/' esp32_marauder/configs.h
+          sed -i 's/^ \/\/#define MARAUDER_FLIPPER/ MARAUDER_FLIPPER/' esp32_marauder/configs.h
           sed -i 's/^ #define ESP32_LDDB/ \/\/ESP32_LDDB/' esp32_marauder/configs.h
           sed -i 's/^ #define MARAUDER_DEV_BOARD_PRO/ \/\/MARAUDER_DEV_BOARD_PRO/' esp32_marauder/configs.h
           sed -i 's/^ #define XIAO_ESP32_S3/ \/\/XIAO_ESP32_S3/' esp32_marauder/configs.h
