--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -3,7 +3,7 @@ name: Build and Push
 on:
   workflow_dispatch:
   pull_request:
-    types: [opened, reopened, edited]
+    types: [opened, reopened, synchronize]
 
 jobs:
   build:
