--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -56,6 +56,13 @@ jobs:
           repository: bigbrodude6119/ESPAsyncWebServer
           ref: master
           path: CustomESPAsyncWebServer
+
+      #- name: Install TFT_eSPI
+      #  uses: actions/checkout@v2
+      #  with:
+      #    repository: justcallmekoko/TFT_eSPI
+      #    ref: master
+      #    path: CustomTFT_eSPI
           
       - name: Install TFT_eSPI
         uses: actions/checkout@v2
@@ -120,6 +127,10 @@ jobs:
           ref: 8.1.0
           path: CustomEspSoftwareSerial
           
+      #- name: Search for SD lib in arduino-esp32 v2.0.4
+      #  run: |
+      #    find /home/runner/work/ESP32Marauder/ESP32Marauder/2.0.4arduino-esp32 -name "SD"
+          
       - name: Configure TFT_eSPI
         run: |
           rm -f CustomTFT_eSPI/User_Setup_Select.h
@@ -130,6 +141,30 @@ jobs:
           pwd
           ls -la
           ls -la CustomTFT_eSPI
+          
+      #- name: Place 2.0.10 for use
+      #  run: |
+      #    mkdir -p /home/runner/.arduino15/packages/esp32/hardware/esp32/
+      #    cp -R /home/runner/work/ESP32Marauder/ESP32Marauder/2.0.3 /home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.3
+      #    ls -la /home/runner/.arduino15/packages/esp32/hardware/esp32/
+      #    echo Whoever made me have to do this can fuck off
+          
+      #- name: Replace arduino-esp32 v2.0.10 that was gloriously forced on us
+      #  run: |
+      #    rm -rf /home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.10
+      #    cp -R /home/runner/work/ESP32Marauder/ESP32Marauder/2.0.3 /home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.3
+      #    ls -la /home/runner/.arduino15/packages/esp32/hardware/esp32/
+      #    echo Whoever made me have to do this can fuck off
+          
+      #- name: Search for SD lib in arduino-esp32
+      #  run: |
+      #    find /home/runner/ -name "SD"
+          
+      #- name: Replace SD lib
+      #  run: |
+      #    rm -rf /home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.10/libraries/SD
+      #    cp -R /home/runner/work/ESP32Marauder/ESP32Marauder/2.0.4arduino-esp32/libraries/SD /home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.10/libraries/SD
+      #    ls -la /home/runner/.arduino15/packages/esp32/hardware/esp32/2.0.10/libraries/SD
           
       - name: Modify platform.txt
         run: |
@@ -158,8 +193,6 @@ jobs:
           sed -i 's/^ #define ESP32_LDDB/ \/\/#define ESP32_LDDB/' esp32_marauder/configs.h
           sed -i 's/^ #define MARAUDER_DEV_BOARD_PRO/ \/\/#define MARAUDER_DEV_BOARD_PRO/' esp32_marauder/configs.h
           sed -i 's/^ #define XIAO_ESP32_S3/ \/\/#define XIAO_ESP32_S3/' esp32_marauder/configs.h
-
-
           
 
       # ------------- BUILD -------------
