--- a/.github/workflows/build_push.yml
+++ b/.github/workflows/build_push.yml
@@ -145,26 +145,26 @@ jobs:
             cat "$i" | grep compiler.c.elf.libs.esp32
           done
           
-      - name: Build Marauder for Flipper Zero Multi Board
+      - name: Build Marauder for StampS3 Board
         uses: ArminJo/arduino-test-compile@v3.2.1
         with:
           sketch-names: esp32_marauder.ino
           arduino-board-fqbn: esp32:esp32:esp32s3:PartitionScheme=min_spiffs,FlashSize=8M,PSRAM=enabled
           extra-arduino-cli-args: "--warnings none"
           
-      - name: Rename Marauder Multi Board bin
+      - name: Rename Marauder StampS3 bin
         run: |
-          mv ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.ino.bin ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.multiboardS3.bin
+          mv ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.ino.bin ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.stampS3.bin
 
       - name: Display finished bins
         run: |
           find ./esp32_marauder/build -name "*.bin"
           
-      - name: 'Upload MultiboardS3 Artifact'
+      - name: 'Upload StampS3 Artifact'
         uses: actions/upload-artifact@v3
         with:
-          name: esp32_marauder.multiboardS3.bin
-          path: ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.multiboardS3.bin
+          name: esp32_marauder.stampS3.bin
+          path: ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.stampS3.bin
           retention-days: 5
           
       - name: Create Release
@@ -179,14 +179,14 @@ jobs:
           prerelease: false
         if: github.event_name != 'pull_request'
 
-      - name: Upload MultiboardS3 Asset
-        id: upload-multiboardS3-release-asset 
+      - name: Upload StampS3 Asset
+        id: upload-stampS3-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.multiboardS3.bin
-          asset_name: esp32_marauder.multiboardS3.bin
+          asset_path: ./esp32_marauder/build/esp32.esp32.esp32s3/esp32_marauder.stampS3.bin
+          asset_name: esp32_marauder.stampS3.bin
           asset_content_type: application/bin
         if: github.event_name != 'pull_request'
